2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpParameterDataProvider.cs: Improved method formatting.
	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: When resolving a
	  type, take into account parameter types for methods and classes. Fixes
	  bug #82209.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: The name of a delegate is the name of the class, not
	  the return type of the invoke method. Don't show the delegate parameters
	  unless the 'show class modifiers' flag is set.

2007-09-13  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed re opened 82311: Rename fails when we have
	  two variables that are called the same. (another issue).

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/LanguageItemVisitor.cs: Properly resolve "this". Fixes bug #82503.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Allow showing intrinsic names only when
	  resolving is, as or new.
	* Gui/FormattingPanel.cs, CSharpBinding.mdp,
	  gtk-gui/CSharpBinding.FormattingPanelWidget.cs, gtk-gui/gui.stetic:
	  Updated.
	* Parser/Resolver.cs: The text editor extension needs internalResolve to
	  return the real array types, not only System.Array. Fixes bug #82831.
	* CSharpAmbience.cs: Add support for the new UseIntrinsicNames flag.

2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Don't include abstract classes in the
	  'new' completion list.

2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/TypeVisitor.cs: Use the fully qualified name when returning the
	  type for array items. Fixes bug #82830.

2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs, Parser/TypeVisitor.cs: The 'this' reference is not
	  valid outside of a class member. Fix for bug #82743.

2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/ChooseRuntimePanel.cs, Gui/CodeGenerationPanel.cs,